modules/gdscript/tests/scripts/runtime/errors/callable_call_invalid_arg_type.gd
func test():
	print(load.bind([]).call())
